<resources>
    <string name="app_name">GitHubHomework</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_about_app">About app</string>
    <string name="title_activity_user">User</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- errors -->
    <string name="unknown_error">There was an unknown error....</string>
    <string name="network_error">You need the internet connection for this action.</string>
    <string name="username_required">Username is required</string>
    <string name="password_required">Password is required</string>
    <string name="title_required">Title is required</string>
    <string name="content_required">Content is required</string>
    <string name="issue_not_found">Issue was not found.</string>

    <string name="new_issue_title">New issue</string>
    <string name="edit_issue_title">Edit issue</string>


    <string name="my_recent_repos">My recent repositories</string>
    <string name="unowned_recent_repos">Recent repositories</string>

    <!-- Delete dialog -->
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want delete this item?</string>
    <string name="delete_dialog_yes">Delete</string>
    <string name="delete_dialog_no">Nope</string>


    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signIn">Sign in</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="sign_out">Sign out</string>
    <string name="submit">Submit</string>
    <string name="edit_issue_desc">Edit issue</string>
    <string name="delete_issue_desc">Delete issue</string>
    <string name="username_hint">Type username…</string>
    <string name="author">Author:</string>
    <string name="author_value">Aleš Kůtek</string>
    <string name="version">Version:</string>
    <string name="version_value">1.0</string>
    <string name="app_desc">Description:</string>
    <string name="app_desc_value">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of ..</string>
    <string name="no_issues_found">No issues found.</string>
    <string name="no_repositories_found">No repositories found.</string>
    <string name="no_users_found">No users found.</string>
</resources>
