<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.githubhomework.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_search_user" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.githubhomework.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_sign_in" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.githubhomework.ui.aboutapp.AboutAppFragment"
        android:label="@string/title_about_app"
        tools:layout="@layout/fragment_about_app" />
</navigation>