<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.githubhomework.ui.aboutapp.AboutAppViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="@dimen/big_gap"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textSize="@dimen/basic_text_size"
            android:id="@+id/author"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/authorValue"
            android:text="@string/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="@dimen/value_offset"
            android:textSize="@dimen/basic_text_size"
            android:textStyle="bold"
            android:id="@+id/authorValue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/author"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/author_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="@dimen/basic_text_size"
            android:id="@+id/version"
            app:layout_constraintTop_toBottomOf="@id/author"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/versionValue"
            android:text="@string/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="@dimen/value_offset"
            android:textSize="@dimen/basic_text_size"
            android:textStyle="bold"
            android:id="@+id/versionValue"
            app:layout_constraintTop_toBottomOf="@id/author"
            app:layout_constraintStart_toEndOf="@id/version"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/version_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:gravity="start"
            android:textSize="@dimen/basic_text_size"
            android:id="@+id/appDesc"
            app:layout_constraintTop_toBottomOf="@id/version"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/app_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="15sp"
            android:id="@+id/appDescValue"
            app:layout_constraintTop_toBottomOf="@id/appDesc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/app_desc_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>