<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="viewModel"
            type="com.example.githubhomework.ui.signin.SignInViewModel" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="@dimen/big_gap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:text="@={viewModel.username}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:imeOptions="actionGo"
                    android:maxLines="1"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:text="@={viewModel.password}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="text"
                    android:imeOptions="actionGo"
                    android:maxLines="1"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:onClick="@{() -> viewModel.onSubmit()}"
                android:elevation="4dp"
                android:layout_marginTop="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/password_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/signIn"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>